plugins/function-scope-injector/testData/diagnostics/byFunctionName/isolation.kt
fun println(s: String) {}

fun fooWithHello() {
    println(HELLO)
}

fun bar() {
    println(<!UNRESOLVED_REFERENCE!>HELLO<!>)
}